--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.6</version>
         </dependency>
-         <!--https://mvnrepository.com/artifact/org.slf4j/slf4j-api--> 
+        <!--https://mvnrepository.com/artifact/org.slf4j/slf4j-api--> 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -103,6 +103,16 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>6.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots-abilities</artifactId>
+            <version>6.3.0</version>
         </dependency>
     </dependencies>
 
