terminamento de processos em windows + deteccao dispositivo usb

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.30</version>
         </dependency>
+        <dependency>
+            <groupId>net.samuelcampos</groupId>
+            <artifactId>usbdrivedetector</artifactId>
+            <version>2.2.1</version>
+        </dependency>
     </dependencies>
 
 </project>
